리팩토링 완료

--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
   </head>
 
   <body>
-    <div class="notification">
+    <!-- <div class="notification">
       <strong>
-        <p>업데이트</p>
-        <p>
-          HTML/CSS 섹션의 팝업 이미지&링크 및 웹사이트 마크업&스타일링 업데이트
-          (마지막 업데이트 시각: 15:44 21-09-24 (금))
-        </p>
+        <h2>업데이트</h2>
+        <p>(마지막 업데이트 시각: 00:00 00-00-00 (금))</p>
       </strong>
-    </div>
+    </div> -->
     <header>
       <div class="container container-nav">
         <div class="site-title">
@@ -127,26 +124,6 @@
               </li>
             </ul>
           </li>
-
-          <!-- <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="https://reactdogapp.netlify.app/"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> Dog API 포트폴리오 </a>
-        </span>
-
-        <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="https://reactnoteapp-jinwookshin.netlify.app/"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> 노트 앱 포트폴리오 </a>
-        </span>
-
-        <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="./pokemonAPIportfolio/index.html"> <i class="fab fa-js-square" style="color: rgb(255, 196, 0);"></i> Pokemon API 포트폴리오 </a>
-        </span>
-        
-        <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="./html5portfolio/index.html""> <i class="fab fa-html5" style="color: rgb(250, 88, 59);"></i> WebRTC/Canvas API 포트폴리오 </a>
-        </span>
-        
-        <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="./doraemonJSminiGamePortfolio/index.html"> <i class="fab fa-js-square" style="color: rgb(255, 196, 0);"></i> 도라에몽 미니게임 포트폴리오 </a>
-        </span> -->
         </ul>
       </div>
       <div class="portfolio-container">
@@ -1004,22 +981,6 @@
                 </dl>
               </li>
             </ul>
-            <!-- template -->
-            <!-- <dl>
-              <div class="portfolio">
-                <dt></dt>
-                <dd>
-                  <div class="portfolio-image-container"></div>
-                  <details class="portfolio-details">
-                    <summary class="portfolio-summary"></summary>
-                    <div>
-<strong></strong>
-                      <ul class="portfolio-body"></ul>
-                    </div>
-                  </details>
-                </dd>
-              </div>
-            </dl> -->
           </div>
         </div>
       </div>
