--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <ul class="contents">
           <li class="javascript-portfolio-container">
             <h2>
-              <a href="#javascript">Ⅰ. JavaScript</a>
+              <!-- <a href="#javascript"> -->
+              Ⅰ. JavaScript
+              <!-- </a> -->
               <i class="fab fa-js-square" style="color: rgb(255, 196, 0)"></i>
             </h2>
             <ul>
@@ -56,7 +58,9 @@
           </li>
           <li class="react-portfolio-container">
             <h2>
-              <a href="#react">Ⅱ. React</a>
+              <!-- <a href="#react"> -->
+              Ⅱ. React
+              <!-- </a> -->
               <i class="fab fa-react" style="color: rgb(18, 171, 241)"></i>
             </h2>
             <ul>
@@ -66,7 +70,9 @@
           </li>
           <li class="html-css-portfolio-container">
             <h2>
-              <a href="#html-css">Ⅲ. HTML/CSS</a>
+              <!-- <a href="#"> -->
+              Ⅲ. HTML/CSS
+              <!-- </a> -->
               <i class="fab fa-html5" style="color: rgb(250, 88, 59)"></i>
               <i class="fab fa-css3-alt"></i>
             </h2>
@@ -265,7 +271,7 @@
                           • 본 포트폴리오를 완성하며 사용자의 입력을 감지하고,
                           canvas를 사용해 그래픽 요소를 웹에 구현하고, 원하는
                           이미지를 이용, 객체화하여 수학적 계산을 통해 게임을
-                          만들 수 있게 됨. <
+                          만들 수 있게 됨.
                         </li>
                       </ul>
                     </div>
