footer 코드 리팩토링

--- a/about-me.html
+++ b/about-me.html
@@ -44,14 +44,14 @@
               </h2>
             </li>
 
-            <li id="links resume-link">
+            <!-- <li id="links resume-link">
               <h2>
                 <i class="fas fa-file-pdf"></i>
                 <a href="./downloads/신진욱_프론트엔드_이력서.pdf" download>
                   &nbsp;신진욱_프론트엔드_이력서.pdf
                 </a>
               </h2>
-            </li>
+            </li> -->
 
             <li id="links blog-link">
               <h2>
