feat(update): .portfolio-details css update

--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
         <ul class="contents">
           <li class="javascript-portfolio-container">
             <h2>
-              <!-- <a href="#javascript"> -->
-              Ⅰ. JavaScript
-              <!-- </a> -->
+              <a href="#javascript-bookmark">Ⅰ. JavaScript</a>
               <i class="fab fa-js-square" style="color: rgb(255, 196, 0)"></i>
             </h2>
             <ul>
@@ -58,9 +56,7 @@
           </li>
           <li class="react-portfolio-container">
             <h2>
-              <!-- <a href="#react"> -->
-              Ⅱ. React
-              <!-- </a> -->
+              <a href="#react-bookmark">Ⅱ. React</a>
               <i class="fab fa-react" style="color: rgb(18, 171, 241)"></i>
             </h2>
             <ul>
@@ -70,9 +66,7 @@
           </li>
           <li class="html-css-portfolio-container">
             <h2>
-              <!-- <a href="#"> -->
-              Ⅲ. HTML/CSS
-              <!-- </a> -->
+              <a href="#html-css-bookmark">Ⅲ. HTML/CSS</a>
               <i class="fab fa-html5" style="color: rgb(250, 88, 59)"></i>
               <i class="fab fa-css3-alt"></i>
             </h2>
@@ -135,8 +129,8 @@
       <div class="portfolio-container">
         <h2 class="title">컨텐츠</h2>
         <div class="contents">
-          <div class="javascript-portfolio-container">
-            <h2 id="javascript">Ⅰ. JavaScript</h2>
+          <div class="javascript-portfolio-container" id="javascript-bookmark">
+            <h2>Ⅰ. JavaScript</h2>
             <dl>
               <div class="portfolio">
                 <dt>① Pokemon API App</dt>
@@ -370,8 +364,8 @@
             </dl>
           </div>
 
-          <div class="react-portfolio-container">
-            <h2 class="title" id="react">Ⅱ. React</h2>
+          <div class="react-portfolio-container" id="react-bookmark">
+            <h2 class="title">Ⅱ. React</h2>
             <dl>
               <div class="portfolio">
                 <dt>Dog API App</dt>
@@ -504,8 +498,8 @@
               </div>
             </dl>
           </div>
-          <div class="html-css-portfolio-container">
-            <h2 class="title" id="html-css">Ⅲ. HTML/CSS</h2>
+          <div class="html-css-portfolio-container" id="html-css-bookmark">
+            <h2 class="title">Ⅲ. HTML/CSS</h2>
             <ul>
               <li>
                 <h2>1. 시맨틱 마크업 및 스타일링</h2>
