momentumJS controller 업데이트

--- a/index.html
+++ b/index.html
@@ -986,14 +986,14 @@
         </div>
       </div>
       <!-- <div class="scroll-controller"> -->
-      <ul class="scroll-controller">
+      <!-- <ul class="scroll-controller">
         <li class="table-of-contents"><button type="button">목차</button></li>
         <li class="javascript-bookmark"><button type="button">JS</button></li>
         <li class="react-bookmark"><button type="button">React</button></li>
         <li class="html-css-bookmark">
           <button type="button">HTML/CSS</button>
         </li>
-      </ul>
+      </ul> -->
       <!-- </div> -->
     </main>
     <footer>
