--- a/index.html
+++ b/index.html
@@ -985,16 +985,16 @@
           </div>
         </div>
       </div>
-      <!-- <div class="scroll-controller"> -->
-      <!-- <ul class="scroll-controller">
+      <!-- <div class="scroll-controller">
+      <ul class="scroll-controller">
         <li class="table-of-contents"><button type="button">목차</button></li>
         <li class="javascript-bookmark"><button type="button">JS</button></li>
         <li class="react-bookmark"><button type="button">React</button></li>
         <li class="html-css-bookmark">
           <button type="button">HTML/CSS</button>
         </li>
-      </ul> -->
-      <!-- </div> -->
+      </ul>
+      </div> -->
     </main>
     <footer>
       <small>Copyright &copy; 2021 Jinwook Shin</small>
