feat: 전체 포트폴리오 description 추가

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         <div id="email-container">
           <h2>Email</h2>
           <div id="emailAddress">
-            <a href="mailto:7inug1@gmail.com">7inug1@gmail.com</a>
+            <a href="mailto:0201jinwook@gmail.com">0201jinwook@gmail.com</a>
           </div>
         </div>
       </div>
