--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             <ul>
               <li>
                 <a href="#sinder">
-                  Sinder (개발자 매칭 앱)
+                  [TEAM] Sinder - 개발자 매칭 앱
                 </a>
               </li>
               <li>
                 <a href="#igur">
-                  IGUR (인스타그램 보고서 제작 앱)
+                  IGUR - 인스타그램 보고서 제작 앱
                 </a>
               </li>
               <li>
@@ -125,7 +125,7 @@
             <h2 class="title">Ⅰ. React</h2>
             <dl>
               <div class="portfolio sinder">
-                <dt id="sinder">① Sinder (개발자 매칭 앱)</dt>
+                <dt id="sinder">[TEAM] ① Sinder (개발자 매칭 앱)</dt>
                 <dd>
                   <div class="portfolio-image-container">
                     <div class="image-container">
@@ -192,11 +192,13 @@
                         keyword: React, Node, MongoDB, Express, D3, Puppeteer, Styled-components, AWS (Elastic Beanstalk, S3, Route 53), Google Cloud Natural Language API, Tensorflow.js, Object Detection
                       </strong>
                       <ul class="portfolio-body">
-                        <li> •검색한 인스타그램 사용자에 대한 보고서를 만들어주는 서비스</li>
-                        <li> •Puppeteer로 인스타그램 데이터 크롤링 코드 구축</li>
-                        <li> •Google Cloud Natural Language API와 Tensorflow.js의 Object Detection으로 데이터 분석</li>
-                        <li> •D3로 데이터 파이 차트 제작</li>
-
+                        <li>• 검색한 인스타그램 사용자에 대한 보고서를 만들어주는 서비스</li>
+                        <li>• Puppeteer로 headless Chrome 환경에서 특정 인스타그램 사용자의 데이터를 크롤링</li>
+                        <li>• Google Cloud Natural Language API와 TensorFlow.js의 Object Detection를 이용해  게시글 설명을 자연어 처리하고 게시글 사진의 물체를 인식하여 추가 데이터 생성</li>
+                        <li>• D3로 자연어 처리 후 생성된 게시글의 항목과 카테고리 분류를 원형 차트로 출력</li>
+                        <li>• 프론트엔드에서 인스타그램 이미지의 src가 CDN url로 되어 있어 개인 페이지에서 호스트 하는 것이 불가능하여 이를 해결하기 위해 백엔드에서 axios로 fetch 하여 처리</li>
+                        <li>• 백엔드가 배포된 Amazon Linux 환경에서 puppeteer가 chromium을 설치하지 못해 크롤링을 못하는 문제가 발생하여 cli에서 curl로 chromium을 설치하는 config 파일을 추가</li>
+                        <li>• 위의 문제로 POST 요청이 안되는 문제를 브라우저에서 CORS 문제로 출력함에 따라 CORS 문제를 탐색함과 더불어 앱의 총체적 부분에서 문제를 파악하는 경험을 함</li>
                       </ul>
                     </div>
                   </details>
@@ -561,7 +563,15 @@
                         WeatherAPI
                       </strong>
                       <ul class="portfolio-body">
-                        <li>업데이트 중입니다.</li>
+                        <li>• 관심사를 분리하여 clock, login, quotes, todo, 그리고 weather에 대한 JavaScript 파일을 분리</li>
+                        <li>• 첫 로그인 화면에서 사용자는 본인 이름을 입력하고, 입력된 정보를 localStorage에 저장</li>
+                        <li>• setInterval 함수를 이용해 매 초마다 현재 시각을 받아오는 로직 작성</li>
+                        <li>• 사용자가 현재 geolocation 권한을 허가하면 해당 정보를 기반으로 현재 위치와 기온을 불러옴</li>
+                        <li>• To Do 작성을 매끄럽게 하기 위해 엔터키로 손쉽게 컨텐츠를 제출할 수 있게 함 (form & submit type button)</li>
+                        <li>• 사용자 편의성을 위해 수정 버튼을 클릭하거나 To Do를 더블 클릭하면 수정 창이 나오도록 함</li>
+                        <li>• To Do 수정을 매끄럽게 하기 위해 기존의 DOM을 CSS로 숨기고, 가장 가까운 부모 DOM에 새 form (입력창)을 부착하여 수정 기능을 추가했던 부분이 인상 깊게 남음</li>
+                        <li>• 알파벳 순서와 생성된 날짜로 정렬하는 기능 제작</li>
+                        <li>• random 함수를 이용해 랜덤하게 quote를 출력하는 기능 추가 </li>
                       </ul>
                     </div>
                   </details>
@@ -587,10 +597,25 @@
                           />
                         </a>
                       </div>
+                      <details class="portfolio-details">
+                        <summary class="portfolio-summary">
+                          펼쳐보기
+                        </summary>
+                        <div>
+                          <strong>
+                            Keyword: Semantic Markup, 정적 페이지
+                          </strong>
+                          <ul class="portfolio-body">
+                            <li>• CSS 클래스를 모듈화하여 반복적인 작업을 최소화하며 코드 작성</li>
+                            <li>• 시맨틱 마크업을 준수하여 문서의 구조 및 맥락을 고민하여 코드 작성</li>
+                            <li>• 확장성을 고려하여 예시로 추가 기사가 추가될 경우, 기존의 ul, li 구조에 새로운 li를 추가하면 되게끔 제작</li>
+                          </ul>
+                        </div>
+                      </details>
                     </dd>
                   </div>
                   <div class="portfolio">
-                    <dt id="success-store">② 성공가게</dt>
+                    <dt id="success-store">② 성공을 도와주는 가게</dt>
                     <dd>
                       <div class="portfolio-image-container">
                         <a
@@ -602,6 +627,22 @@
                           />
                         </a>
                       </div>
+                      <details class="portfolio-details">
+                        <summary class="portfolio-summary">
+                          펼쳐보기
+                        </summary>
+                        <div>
+                          <strong>
+                            Keyword: Semantic Markup, 크로스 브라우징, CSS1 & 2, 정적 페이지
+                          </strong>
+                          <ul class="portfolio-body">
+                            <li>• CSS3의 기능 (grid, flex)를 사용하지 않고 CSS1과 2 문법으로 그리드 레이아웃을 제작하며 과거의 CSS 코드 작성에 대해 익혀보려 노력함</li>
+                            <li>• 예시로 페이지의 제목이 되는 로고를 h1으로 작성하며 HTML 문서의 맥락을 생각하며 작성</li>
+                            <li>• before과 after 같은 가상 클래스를 활용하여 HTML 태그를 최소한으로 사용하며 웹사이트 제작</li>
+                            <li>• ul, li에 더하여 dl, dt, dd 등 추가로 도입할 수 있는 HTML를 찾아보며 사용하려 노력함</li>
+                          </ul>
+                        </div>
+                      </details>
                     </dd>
                   </div>
                   <div class="portfolio">
@@ -641,6 +682,21 @@
                           />
                         </a>
                       </div>
+                      <details class="portfolio-details">
+                        <summary class="portfolio-summary">
+                          펼쳐보기
+                        </summary>
+                        <div>
+                          <strong>
+                            Keyword: Semantic Markup, 모바일, 정적 페이지
+                          </strong>
+                          <ul class="portfolio-body">
+                            <li>• 반복되는 레이아웃에 대해 HTML 및 CSS 모듈화로 최소한의 반복 작업으로 코드를 작성하려 노력</li>
+                            <li>• 탭 및 버튼 등을 컴포넌트로 만들어 CSS 클래스만 추가하면 해당 컴포넌트로 사용할 수 있게끔 편의성 및 확장성 고려</li>
+                            <li>• 헤더 부분의 커스텀 디자인을 구현하기 위해 before 및 after 가상 클래스를 활용해 HTML 태그를 최소하하며 구현</li>
+                          </ul>
+                        </div>
+                      </details>
                     </dd>
                   </div>
                   <div class="portfolio">
@@ -664,6 +720,20 @@
                           />
                         </a>
                       </div>
+                      <details class="portfolio-details">
+                        <summary class="portfolio-summary">
+                          펼쳐보기
+                        </summary>
+                        <div>
+                          <strong>
+                            Keyword: Semantic Markup, 퍼블리싱, Responsive
+                          </strong>
+                          <ul class="portfolio-body">
+                            <li>• 주도적으로 모바일용 화면을 디자인하여 반응형 웹사이트로 제작</li>
+                            <li>• 모듈화하여 관리자 및 일반 사용자를 구분하는 채팅 레이아웃을 CSS 클래스로 컴포넌트화하고 확장성을 용이하게 함</li>
+                          </ul>
+                        </div>
+                      </details>
                     </dd>
                   </div>
                 </dl>
